--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.yo1000</groupId>
     <artifactId>hanger</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.1-RELEASE</version>
 
     <!-- this is important for sonar-packaging-maven-plugin -->
     <packaging>sonar-plugin</packaging>
